# src/models/createNewsDto.ts
@@ -3,7 +3,7 @@ export default class CreateNewsDto{
 
     constructor(public title : string = "",
         public shortDescription: string = "", 
-        public publicDate: Date = new Date(), 
+        public publishDate: Date = new Date(), 
         public image: string = "") {
 
     }
