# src/models/newsDto.ts
@@ -3,7 +3,7 @@ export default class NewsDto {
     constructor(public id = 0,
         public title = "",
         public shortDescription: string = "", 
-        public publicDate: number = Date.now(), 
+        public publishDate: number = Date.now(), 
         public image: string = "") {
         
     }
