# src/swagger/swagger.json
@@ -51,7 +51,7 @@
 					"default": "",
 					"x-nullable": true
 				},
-				"publicDate": {
+				"publishDate": {
 					"type": "number",
 					"format": "double",
 					"x-nullable": true
@@ -139,10 +139,10 @@
 					"default": "",
 					"x-nullable": true
 				},
-				"publicDate": {
+				"publishDate": {
 					"type": "string",
 					"format": "date-time",
-					"default": "2020-05-11T16:10:31.498Z",
+					"default": "2020-05-14T14:30:07.550Z",
 					"x-nullable": true
 				},
 				"image": {
